[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/menus/main/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://resources/theme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/menus/leaderboard/Leaderboard.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ui-bits/SelectSquare.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/menus/settings/Settings.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/menus/upgrades/Upgrades.tscn" type="PackedScene" id=6]
[ext_resource path="res://music/main.mp3" type="AudioStream" id=7]
[ext_resource path="res://models/title-infiniteshooter/title.glb" type="PackedScene" id=8]

[sub_resource type="Animation" id=1]
resource_name = "introduce_title"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Title:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector3( 0, 15, 0 ), Vector3( 0, 8, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Title:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector3( -45, 0, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Menu/Options:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Menu/SelectSquare:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AltText:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.2 ),
"transitions": PoolRealArray( 0.5, 2, 2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="MainMenu" type="Node"]
script = ExtResource( 1 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
mix_target = 1
bus = "Music"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "introduce_title"
anims/introduce_title = SubResource( 1 )
anims/switch = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="Title" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 15, 0 )

[node name="SpotLight" type="SpotLight" parent="Title"]
transform = Transform( 0.967396, 1.10707e-08, -0.253268, 0.251038, -0.132429, 0.958875, -0.0335402, -0.991192, -0.128112, -2.70012, 3.61548, -1.15619 )
light_energy = 0.6
light_specular = 1.0
spot_range = 13.711
spot_angle = 38.7542

[node name="SpotLight2" type="SpotLight" parent="Title"]
transform = Transform( 0.958556, -0.0353307, 0.282704, -0.281074, -0.279396, 0.918115, 0.0465488, -0.959525, -0.277748, 2.08223, 3.63313, -1.09902 )
light_energy = 0.5
light_specular = 2.0
spot_range = 40.4068
spot_angle = 39.6595

[node name="Menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="VBoxContainer" parent="Menu"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.5
margin_top = -67.5
margin_right = 40.5
margin_bottom = 67.5
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Label" parent="Menu/Options"]
margin_right = 81.0
margin_bottom = 15.0
text = "start"
align = 1
valign = 1

[node name="Leaderboard" type="Label" parent="Menu/Options"]
margin_top = 30.0
margin_right = 81.0
margin_bottom = 45.0
text = "leaderboard"
align = 1
valign = 1

[node name="Upgrades" type="Label" parent="Menu/Options"]
margin_top = 60.0
margin_right = 81.0
margin_bottom = 75.0
text = "upgrades"
align = 1
valign = 1

[node name="Settings" type="Label" parent="Menu/Options"]
margin_top = 90.0
margin_right = 81.0
margin_bottom = 105.0
text = "settings"
align = 1
valign = 1

[node name="Quit" type="Label" parent="Menu/Options"]
margin_top = 120.0
margin_right = 81.0
margin_bottom = 135.0
text = "quit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectSquare" parent="Menu" instance=ExtResource( 4 )]
visible = false
modulate = Color( 1, 1, 1, 1 )
options_path = NodePath("../Options")
auto_show = false

[node name="StartScreen" type="Control" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Menu/StartScreen"]
anims/flash_text = SubResource( 3 )

[node name="AltText" type="Label" parent="Menu/StartScreen"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -91.0
margin_top = 50.5
margin_right = 91.0
margin_bottom = 73.5
text = "press any key to continue"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" parent="." instance=ExtResource( 5 )]
visible = false

[node name="Upgrades" parent="." instance=ExtResource( 6 )]
visible = false

[node name="Leaderboard" parent="." instance=ExtResource( 3 )]
visible = false

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="selected" from="Menu/SelectSquare" to="." method="_on_SelectSquare_selected"]
[connection signal="closed" from="Settings" to="." method="_on_OptionsMenu_closed"]
[connection signal="closed" from="Upgrades" to="." method="_on_Upgrades_closed"]
[connection signal="closed" from="Leaderboard" to="." method="_on_Leaderboard_closed"]
