[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/menus/main/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://resources/theme-submenu.tres" type="Theme" id=2]
[ext_resource path="res://scenes/menus/leaderboard/Leaderboard.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/menus/saving/SaveScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/menus/settings/Settings.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/menus/readme/Readme.tscn" type="PackedScene" id=6]
[ext_resource path="res://music/main.mp3" type="AudioStream" id=7]
[ext_resource path="res://models/title-infiniteshooter/title.glb" type="PackedScene" id=8]
[ext_resource path="res://music/startup.mp3" type="AudioStream" id=10]

[sub_resource type="Animation" id=1]
resource_name = "introduce_title"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Title:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector3( 0, 15, 0 ), Vector3( 0, 10, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Title:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector3( -45, 0, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Menu/Options:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="GIProbeData" id=4]
bounds = AABB( -5, -5.85031, -8.73882, 10, 11.7006, 17.4776 )
cell_size = 0.273088
to_cell_xform = Transform( 3.66182, 0, 0, 0, 3.66182, 0, 0, 0, 3.66182, 18.3091, 21.4228, 32 )
dynamic_data = PoolIntArray( 0, 7, 64, 64, 64, 1, 0, 0, 0, 11, -1006591168, 32654, 1086324736, 1086324736, 0, 0, -1, -1, -1, -1, -1, -1, -1, -1, 0, 0, 8355711, 0 )
dynamic_range = 4
energy = 0.4
bias = 1.5
normal_bias = 0.0
propagation = 0.7

[sub_resource type="Animation" id=3]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AltText:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.2 ),
"transitions": PoolRealArray( 0.5, 2, 2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="MainMenu" type="Node"]
script = ExtResource( 1 )

[node name="Startup" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
autoplay = true
bus = "Music"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "Music"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "introduce_title"
anims/introduce_title = SubResource( 1 )
anims/switch = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="GIProbe" type="GIProbe" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10.6211, -5.19127 )
subdiv = 0
extents = Vector3( 5, 5.85031, 8.73882 )
energy = 0.4
data = SubResource( 4 )

[node name="Indirect Lighting" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.78326, 0.621695, 0, -0.621695, -0.78326, 0, 11.6537, -8.32371 )
light_energy = 2.0

[node name="Title" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8, 0 )

[node name="Light" type="SpotLight" parent="Title"]
transform = Transform( 1, 0, 0, 0, -0.642787, 0.766044, 0, -0.766044, -0.642787, 0, 2.255, -2 )
spot_range = 17.0
spot_angle = 60.0

[node name="Menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="Options" type="VBoxContainer" parent="Menu"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -73.5
margin_right = 100.0
margin_bottom = 111.5
custom_constants/separation = 15

[node name="Play" type="Button" parent="Menu/Options"]
margin_right = 200.0
margin_bottom = 45.0
rect_min_size = Vector2( 0, 32 )
theme_type_variation = "LargeLabel"
text = "start"

[node name="Leaderboard" type="Button" parent="Menu/Options"]
margin_top = 60.0
margin_right = 200.0
margin_bottom = 105.0
rect_min_size = Vector2( 0, 32 )
theme_type_variation = "LargeLabel"
text = "leaderboard"

[node name="Readme" type="Button" parent="Menu/Options"]
margin_top = 120.0
margin_right = 200.0
margin_bottom = 165.0
rect_min_size = Vector2( 0, 32 )
theme_type_variation = "LargeLabel"
text = "instructions"

[node name="Settings" type="Button" parent="Menu/Options"]
margin_top = 180.0
margin_right = 200.0
margin_bottom = 225.0
rect_min_size = Vector2( 0, 32 )
theme_type_variation = "LargeLabel"
text = "settings"

[node name="Quit" type="Button" parent="Menu/Options"]
margin_top = 240.0
margin_right = 200.0
margin_bottom = 285.0
rect_min_size = Vector2( 0, 32 )
theme_type_variation = "LargeLabel"
text = "quit"

[node name="StartScreen" type="Control" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Menu/StartScreen"]
anims/flash_text = SubResource( 3 )

[node name="AltText" type="Label" parent="Menu/StartScreen"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -126.0
margin_top = 72.5
margin_right = 127.0
margin_bottom = 97.5
text = "press any key to continue"
align = 1

[node name="Leaderboard" parent="." instance=ExtResource( 3 )]
theme = null

[node name="Readme" parent="." instance=ExtResource( 6 )]

[node name="Settings" parent="." instance=ExtResource( 5 )]

[node name="SaveScreen" parent="." instance=ExtResource( 4 )]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="pressed" from="Menu/Options/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Menu/Options/Leaderboard" to="." method="_on_Leaderboard_pressed"]
[connection signal="pressed" from="Menu/Options/Readme" to="." method="_on_Readme_pressed"]
[connection signal="pressed" from="Menu/Options/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Menu/Options/Quit" to="." method="_on_Quit_pressed"]
[connection signal="closed" from="Leaderboard" to="." method="_on_Leaderboard_closed"]
[connection signal="closed" from="Readme" to="." method="_on_Readme_closed"]
[connection signal="closed" from="Settings" to="." method="_on_Settings_closed"]
[connection signal="closed" from="SaveScreen" to="." method="_on_SaveScreen_closed"]
